# pyproject.toml

[project]
name = "number-guesser"
version = "0.1.0"
description = "Non-interactive numeric processing script with reusable functions."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md" # This would be for a full package
requires-python = ">=3.8"

# No external dependencies are needed for this project.
# If you needed one, like the 'requests' library, you would add it here:
# dependencies = [
#   "requests",
# ]

[project.scripts]
# CLI entry to run the non-interactive processor
number-processor = "app.main:main"
[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "app"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["disabled"]
